@@ -1,14 +1,18 @@
 @file:Suppress("UnstableApiUsage")
 
 import com.android.build.gradle.internal.lint.AndroidLintTask
+import org.gradle.api.GradleException
 import org.gradle.api.file.RegularFile
 
 plugins {
-    id("com.android.application")
-    id("org.jetbrains.kotlin.plugin.compose")
-    id("org.jetbrains.kotlin.plugin.serialization")
-    id("com.google.devtools.ksp")
-    id("com.google.dagger.hilt.android")
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin.compose)
+    alias(libs.plugins.kotlin.serialization)
+    alias(libs.plugins.ksp)
+    alias(libs.plugins.hilt)
+    alias(libs.plugins.ktlint)
+    alias(libs.plugins.detekt)
+    alias(libs.plugins.roborazzi)
 }
 
 android {
@@ -19,45 +23,102 @@ android {
         applicationId = "com.dustvalve.next.android"
         minSdk = 26
         targetSdk = 37
-        versionCode = 275
-        versionName = "0.4.69"
+        versionCode = 278
+        versionName = "0.5.0"
         versionNameSuffix = "-legacy"
     }
 
     signingConfigs {
         create("release") {
+            val keystoreFile = file("../release-keystore.jks")
             val passwordFile = rootProject.file(".password-signing-keys")
-            val signingPassword = if (passwordFile.exists()) {
-                passwordFile.readText().trim()
-            } else ""
-            storeFile = file("../release-keystore.jks")
-            storePassword = signingPassword
-            keyAlias = "dustvalve"
-            keyPassword = signingPassword
+
+            if (keystoreFile.exists() && passwordFile.exists()) {
+                // Production signing: real keystore + password from local secrets.
+                storeFile = keystoreFile
+                storePassword = passwordFile.readText().trim()
+                keyAlias = "dustvalve"
+                keyPassword = storePassword
+            } else {
+                // Fallback to AGP's debug signing when the real keystore / password
+                // is not present. This keeps :app:assembleRelease unblocked in two
+                // scenarios that need a release-variant build without secrets:
+                //   - the baseline-profile regeneration workflow on every push/PR
+                //     (the macrobenchmark only needs an installable APK; the
+                //     deliverable is baseline-prof.txt, not the APK itself)
+                //   - local devs who haven't generated a keystore yet
+                // The resulting APK is debug-signed and NOT shippable. Production
+                // release builds decode release-keystore.jks from KEYSTORE_BASE64
+                // via .github/workflows/release.yml.
+                rootProject.logger.warn(
+                    "release-keystore.jks or .password-signing-keys missing - " +
+                        "falling back to AGP debug signing for the release variant.",
+                )
+                val debug = signingConfigs.getByName("debug")
+                val debugStoreFile = debug.storeFile
+                // AGP only auto-creates the debug keystore when assembleDebug
+                // actually runs (lazy materialization on first debug signing).
+                // CI flows that build release without ever touching the debug
+                // variant find nothing here and validateSigningRelease aborts
+                // with "Keystore file not found". Generate the debug keystore
+                // ourselves at the exact path AGP expects. Idempotent: only
+                // runs when the file is genuinely missing.
+                if (debugStoreFile != null && !debugStoreFile.exists()) {
+                    debugStoreFile.parentFile.mkdirs()
+                    val process = ProcessBuilder(
+                        System.getProperty("java.home") + "/bin/keytool",
+                        "-genkey", "-noprompt",
+                        "-keystore", debugStoreFile.absolutePath,
+                        "-alias", debug.keyAlias!!,
+                        "-keyalg", "RSA", "-keysize", "2048",
+                        "-validity", "10000",
+                        "-dname", "CN=Android Debug,O=Android,C=US",
+                        "-storepass", debug.storePassword!!,
+                        "-keypass", debug.keyPassword!!,
+                    ).redirectErrorStream(true).start()
+                    val output = process.inputStream.bufferedReader().readText()
+                    val exitCode = process.waitFor()
+                    if (exitCode != 0) {
+                        throw GradleException(
+                            "Failed to materialize debug keystore at " +
+                                "${debugStoreFile.absolutePath}: keytool exited $exitCode\n$output",
+                        )
+                    }
+                }
+                storeFile = debug.storeFile
+                storePassword = debug.storePassword
+                keyAlias = debug.keyAlias
+                keyPassword = debug.keyPassword
+            }
         }
     }
 
     buildTypes {
+        debug {
+            // en-XA (accented/expanded) and ar-XB (RTL) pseudolocales for
+            // localizability testing; never enabled on release.
+            isPseudoLocalesEnabled = true
+        }
         release {
             isMinifyEnabled = true
             isShrinkResources = true
             proguardFiles(
                 getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                "proguard-rules.pro",
             )
             signingConfig = signingConfigs.getByName("release")
         }
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
+        sourceCompatibility = JavaVersion.VERSION_25
+        targetCompatibility = JavaVersion.VERSION_25
         isCoreLibraryDesugaringEnabled = true
     }
 
     kotlin {
         compilerOptions {
-            jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21)
+            jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_25)
         }
     }
 
@@ -66,15 +127,71 @@ android {
         buildConfig = true
     }
 
+    androidResources {
+        // Ship exactly the locales the app is translated into (res/values-*);
+        // this still strips the ~75 other locales of androidx/Material3/Media3
+        // library translations from the universal APK. Keep in sync with the
+        // values-* directories when adding a language.
+        localeFilters += listOf("en", "de", "es", "fr", "it", "pt-rBR", "ja", "zh-rCN", "ru")
+        // Auto-generate the Android 13+ LocaleConfig from the values-* dirs +
+        // res/resources.properties so the app appears in
+        // Settings > System > App languages (per-app language preference).
+        generateLocaleConfig = true
+    }
+
+    // The dependency-metadata block is an encrypted blob only Google Play can
+    // read; releases ship as plain APKs on GitHub, so it's dead weight (and
+    // F-Droid rejects APKs that carry it).
+    dependenciesInfo {
+        includeInApk = false
+        includeInBundle = false
+    }
+
+    composeCompiler {
+        // Treat kotlin.collections.{List,Set,Map,Collection} as stable so
+        // composables that take them as params can skip on equal-reference
+        // recompositions. The codebase consistently emits these from read-only
+        // Flows (Room, JSON parsing) and never mutates them after emission.
+        stabilityConfigurationFiles.add(
+            rootProject.layout.projectDirectory.file("compose_stability_config.conf"),
+        )
+
+        // Strong Skipping Mode is on by default in Kotlin Compose Compiler 2.3.21+
+        // (the featureFlags.add(StrongSkipping) form was deprecated in 2.3.21 and
+        // removed in subsequent versions). Audit reports produced via
+        // `-Pcompose.reports=true` to confirm.
+    }
+
     testOptions {
         unitTests.isIncludeAndroidResources = true
         unitTests.isReturnDefaultValues = true
+        // Robolectric 4.17 pokes JDK internals (FileDescriptor, reflection)
+        // that modern JDKs seal by default; open them for the test JVM only.
+        unitTests.all { test ->
+            // Roborazzi: render through the real hardware-accelerated PixelCopy
+            // path so every test in a class captures actual pixels (the default
+            // software path yields blank frames after the first capture).
+            test.systemProperty("robolectric.pixelCopyRenderMode", "hardware")
+            test.jvmArgs(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                // SDK-37 ApplicationSharedMemory shadow reaches SharedSecrets.
+                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                "--add-exports=java.base/jdk.internal.access=ALL-UNNAMED",
+            )
+        }
     }
 
     // AGP can't run NDK strip on these AAR-supplied .so files (no NDK installed
     // in this build env). Opt them out explicitly so AGP doesn't print a noisy
     // "Unable to strip" notice on every build.
     packaging {
+        // kotlinx-coroutines debug-probe stub; only read by the IDE debugger
+        // agent, never at runtime on device.
+        resources.excludes += "DebugProbesKt.bin"
         jniLibs {
             keepDebugSymbols += setOf(
                 "**/libandroidx.graphics.path.so",
@@ -82,124 +199,190 @@ android {
             )
         }
     }
+
+    lint {
+        // Off-by-default check; enabled in every module so the shared
+        // lint.xml can hold it at error severity.
+        enable += "TypographyQuotes"
+        abortOnError = true
+        warningsAsErrors = true
+        checkDependencies = true
+        checkReleaseBuilds = true
+        explainIssues = true
+        showAll = true
+        baseline = file("lint-baseline.xml")
+        lintConfig = rootProject.file("config/lint/lint.xml")
+    }
+}
+
+ktlint {
+    version.set(libs.versions.ktlint.engine.get())
+    android.set(true)
+    ignoreFailures.set(false)
+    filter {
+        exclude { it.file.path.contains("/build/") }
+    }
+    reporters {
+        reporter(org.jlleitschuh.gradle.ktlint.reporter.ReporterType.PLAIN)
+        reporter(org.jlleitschuh.gradle.ktlint.reporter.ReporterType.SARIF)
+    }
+}
+
+detekt {
+    buildUponDefaultConfig = true
+    allRules = false
+    config.setFrom(rootProject.files("config/detekt/detekt.yml"))
+    baseline = rootProject.file("config/detekt/detekt-baseline.xml")
+    parallel = true
+}
+
+roborazzi {
+    // Checked-in screenshot baselines; verifyRoborazziDebug diffs against these.
+    outputDir.set(layout.projectDirectory.dir("src/test/snapshots/roborazzi"))
 }
 
 dependencies {
-    // Core library desugaring (required on legacy branch: minSdk=26 + JVM 21 bytecode)
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.5")
+    // Core library desugaring (required on legacy branch: minSdk=26 + JVM 25 bytecode)
+    coreLibraryDesugaring(libs.desugar.jdk.libs)
+
+    // Project modules
+    implementation(project(":core:common"))
+    implementation(project(":core:model"))
+    implementation(project(":core:database"))
+    implementation(project(":core:datastore"))
+    implementation(project(":domain"))
+    implementation(project(":data"))
 
     // Compose BOM
-    val composeBom = platform("androidx.compose:compose-bom:2026.06.01")
+    val composeBom = platform(libs.compose.bom)
     implementation(composeBom)
 
-    // Material 3 Expressive + compatible compose libs (all pinned to 1.12.0-beta02)
-    implementation("androidx.compose.runtime:runtime:1.12.0-beta02")
-    implementation("androidx.compose.ui:ui:1.12.0-beta02")
-    implementation("androidx.compose.ui:ui-graphics:1.12.0-beta02")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.12.0-beta02")
-    debugImplementation("androidx.compose.ui:ui-tooling:1.12.0-beta02")
-    implementation("androidx.compose.material3:material3:1.5.0-alpha23")
-    implementation("androidx.compose.foundation:foundation:1.12.0-beta02")
-    implementation("androidx.compose.animation:animation:1.12.0-beta02")
+    // Material 3 Expressive + compatible compose libs
+    implementation(libs.compose.runtime)
+    implementation(libs.compose.ui)
+    implementation(libs.compose.ui.graphics)
+    implementation(libs.compose.ui.tooling.preview)
+    debugImplementation(libs.compose.ui.tooling)
+    implementation(libs.material3)
+    implementation(libs.compose.foundation)
+    implementation(libs.compose.animation)
 
     // Graphics Shapes (for MaterialShapes)
-    implementation("androidx.graphics:graphics-shapes:1.1.0")
+    implementation(libs.graphics.shapes)
 
     // Lifecycle
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.11.0")
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.11.0")
+    implementation(libs.lifecycle.viewmodel.compose)
+    implementation(libs.lifecycle.runtime.compose)
 
     // Activity
-    implementation("androidx.activity:activity-compose:1.13.0")
+    implementation(libs.activity.compose)
 
     // Hilt
-    implementation("com.google.dagger:hilt-android:2.60.1")
-    ksp("com.google.dagger:hilt-android-compiler:2.60.1")
-    implementation("androidx.hilt:hilt-lifecycle-viewmodel-compose:1.4.0")
+    implementation(libs.hilt.android)
+    ksp(libs.hilt.android.compiler)
+    implementation(libs.hilt.lifecycle.viewmodel.compose)
 
     // WorkManager + Hilt Work
-    implementation("androidx.work:work-runtime-ktx:2.11.2")
-    implementation("androidx.hilt:hilt-work:1.4.0")
-    ksp("androidx.hilt:hilt-compiler:1.4.0")
+    implementation(libs.work.runtime.ktx)
+    implementation(libs.hilt.work)
+    ksp(libs.hilt.compiler)
 
     // Room
-    implementation("androidx.room:room-runtime:2.8.4")
-    implementation("androidx.room:room-ktx:2.8.4")
-    ksp("androidx.room:room-compiler:2.8.4")
+    implementation(libs.room.runtime)
+    implementation(libs.room.ktx)
+    ksp(libs.room.compiler)
 
     // DataStore
-    implementation("androidx.datastore:datastore-preferences:1.3.0-alpha09")
+    implementation(libs.datastore.preferences)
 
     // DocumentFile (SAF directory/file creation for export)
-    implementation("androidx.documentfile:documentfile:1.1.0")
+    implementation(libs.documentfile)
 
     // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:5.4.0")
-    implementation("com.squareup.okhttp3:okhttp-brotli:5.4.0")
+    implementation(libs.okhttp)
+    implementation(libs.okhttp.brotli)
 
     // Jsoup
-    implementation("org.jsoup:jsoup:1.22.2")
+    implementation(libs.jsoup)
 
     // Coil 3
-    implementation("io.coil-kt.coil3:coil-compose:3.5.0")
-    implementation("io.coil-kt.coil3:coil-network-okhttp:3.5.0")
-    implementation("io.coil-kt.coil3:coil-network-cache-control:3.5.0")
+    implementation(libs.coil.compose)
+    implementation(libs.coil.network.okhttp)
+    implementation(libs.coil.network.cache.control)
 
     // Palette (for extracting dominant colors from album art)
-    implementation("androidx.palette:palette-ktx:1.1.0-alpha01")
+    implementation(libs.palette.ktx)
 
     // Hilt 2.60's KSP processor emits @CanIgnoreReturnValue on generated
     // component methods but does NOT declare errorprone-annotations as a
-    // transitive runtime dep — without this the hiltJavaCompile* step fails
+    // transitive runtime dep - without this the hiltJavaCompile* step fails
     // with "cannot find symbol class CanIgnoreReturnValue".
-    implementation("com.google.errorprone:error_prone_annotations:2.50.0")
+    implementation(libs.errorprone.annotations)
 
     // MaterialKolor (generate M3 ColorScheme from seed color)
-    implementation("com.materialkolor:material-kolor:5.0.0")
+    implementation(libs.material.kolor)
 
     // Media3
-    implementation("androidx.media3:media3-exoplayer:1.11.0-beta01")
-    implementation("androidx.media3:media3-session:1.11.0-beta01")
-    implementation("androidx.media3:media3-datasource-okhttp:1.11.0-beta01")
+    implementation(libs.media3.exoplayer)
+    implementation(libs.media3.session)
+    implementation(libs.media3.datasource.okhttp)
 
     // Kotlinx Serialization
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.11.0")
+    implementation(libs.kotlinx.serialization.json)
 
     // Coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.11.0")
+    implementation(libs.coroutines.android)
+
+    // Immutable collections (stable Compose params for List/Set types)
+    implementation(libs.collections.immutable)
 
     // Reorderable lists (drag & drop for LazyColumn / LazyRow)
-    implementation("sh.calvin.reorderable:reorderable:3.1.0")
+    implementation(libs.reorderable)
 
     // Core KTX
-    implementation("androidx.core:core-ktx:1.19.0")
+    implementation(libs.core.ktx)
+
+    // Profile installer - consumed by androidx.baselineprofile to install
+    // baseline-prof.txt + startup-prof.txt shipped in the release APK.
+    // (Profile files are produced by the :baselineprofile module's
+    // `pixel6Api33` managed-device run and copied to
+    // app/src/release/baseline-prof.txt + startup-prof.txt.)
+    implementation(libs.androidx.profileinstaller)
 
     // --- Unit test dependencies ---
-    testImplementation("junit:junit:4.13.2")
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.11.0")
-    testImplementation("com.google.truth:truth:1.4.5")
-    testImplementation("io.mockk:mockk:1.14.11")
-    testImplementation("org.robolectric:robolectric:4.16.1")
-    testImplementation("androidx.test:core:1.7.0")
-    testImplementation("androidx.test.ext:junit:1.3.0")
-    testImplementation("androidx.room:room-testing:2.8.4")
-    testImplementation("com.squareup.okhttp3:mockwebserver:5.4.0")
-    testImplementation("com.squareup.okhttp3:okhttp-tls:5.4.0")
-    testImplementation("app.cash.turbine:turbine:1.2.1")
-    testImplementation("androidx.compose.ui:ui-test-junit4:1.12.0-beta02")
-    debugImplementation("androidx.compose.ui:ui-test-manifest:1.12.0-beta02")
+    testImplementation(libs.junit)
+    testImplementation(libs.coroutines.test)
+    testImplementation(libs.truth)
+    testImplementation(libs.mockk)
+    testImplementation(libs.robolectric)
+    testImplementation(libs.roborazzi)
+    testImplementation(libs.roborazzi.compose)
+    testImplementation(libs.androidx.test.espresso.core)
+    testImplementation(libs.androidx.test.core)
+    testImplementation(libs.androidx.test.ext.junit)
+    testImplementation(libs.room.testing)
+    testImplementation(libs.okhttp.mockwebserver)
+    testImplementation(libs.okhttp.tls)
+    testImplementation(libs.turbine)
+    testImplementation(libs.compose.ui.test.junit4)
+    debugImplementation(libs.compose.ui.test.manifest)
+
+    // Static analysis plugins / lint checks
+    detektPlugins(libs.detekt.compose)
+    lintChecks(libs.lint.slack.checks)
+    lintChecks(libs.lint.slack.compose)
 }
 
 // lintVital* runs with --fatalOnly during assembleRelease, so the
 // RawDispatchersUse error-severity entries in lint-baseline.xml are never
-// reported and the baseline looks 100% stale to this task — printing both
-// "N entries not found" and "creation variant ... different" warnings on
-// every CI build. Clearing the baseline for lintVital* only silences both,
-// while lintRelease (used by ./build.sh) keeps the baseline and continues
-// to enforce the ratchet documented in config/lint/lint.xml.
-tasks.withType<AndroidLintTask>()
-    .matching { it.name.startsWith("lintVital") }
-    .configureEach {
-        projectInputs.lintOptions.baseline.set(null as RegularFile?)
-        missingBaselineIsEmptyBaseline.set(true)
-    }
+// reported and the baseline looks 100% stale to this task - printing
+// "N entries not found" on every CI build alongside the warnings we
+// actually want to suppress. AGP 9.x seals the baseline property via
+// disallowChanges() inside the task initialization action, so we can't
+// null it out at the task level. The pragmatic fix is to keep
+// lint-baseline.xml as an EMPTY baseline (see app/lint-baseline.xml):
+// nothing for the fatal-only lint to consider stale, so no "N entries not
+// found" diagnostic. lintRelease (run separately via ./build.sh) still
+// runs full lint and reports any new warnings - and now (with
+// warningsAsErrors = true) treats each as a build failure, since the
+// baseline is empty and there's no place left to hide them.
